added files for future networking capabilities, removed redundancies in pom.xml. adjusted game.java and board.java to support alternate move method for future network games